tests/parsing/smtlib/v2.6/errors/089_exit_unclosed_1.expected
File "tests/parsing/smtlib/v2.6/errors/089_exit_unclosed_1.smt2", line 1, character 6-7:
1 | (exit _)
          ^
Error while parsing an exit command, read the reserved word '_',
      but expected a closing parenthesis.
